@@ -28,11 +28,13 @@ import org.apache.taglibs.standard.lang.support.ExpressionEvaluatorManager;
 import org.snipsnap.snip.Links;
 import org.snipsnap.snip.Snip;
 import org.snipsnap.snip.SnipLink;
+import org.snipsnap.snip.filter.links.BackLinks;
 
 import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.JspWriter;
 import javax.servlet.jsp.jstl.core.ConditionalTagSupport;
 import javax.servlet.jsp.tagext.TagSupport;
+import javax.servlet.jsp.tagext.BodyTag;
 import java.io.IOException;
 import java.util.Iterator;
 
@@ -41,31 +43,12 @@ public class BackLinkTag extends TagSupport {
   int count = 15;
 
   public int doStartTag() throws JspException {
+    if(snip==null){ return BodyTag.SKIP_BODY;}
+
     JspWriter out = pageContext.getOut();
     Links backLinks = snip.getAccess().getBackLinks();
-    Iterator iterator = backLinks.iterator();
 
-
-    try {
-      out.println("<span class=\"caption\">people came here from:</span>");
-      out.println("<ul class=\"list\">");
-      int i = this.count;
-      while (iterator.hasNext() && --i >= 0) {
-        String url = (String) iterator.next();
-        out.print("<li>");
-        out.print("<span class=\"count\">");
-        out.print(backLinks.getIntCount(url));
-        out.print("</span>");
-        out.print(" <span class=\"content\"><a href=\"");
-        out.print(url);
-        out.print("\">");
-        out.print(SnipLink.cutLength(url, 90));
-        out.println("</a></span>");
-      }
-      out.println("</ul>");
-    } catch (IOException e) {
-      System.err.println("unable print to JSP writer: " + e);
-    }
+    BackLinks.appendTo(out, snip.getAccess().getBackLinks(), this.count);
     return super.doStartTag();
   }
 
